2002-11-06  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c: Re-read some gtk-docs, we weree mistreating
	  the gtk_idle-functions. This patch fixes this and closes
	  pixmap leakage caused by complete redraw when we had a
	  preempted state.

2002-11-05  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c, src/gerbv_screen.h: Removed clipping/no
	  clipping kludge since export_png now behaves as Dino
	  expects. We should make a function of common code in
	  export_png and redraw_pixmap to make it more maintainable.
	* src/gerbv.c (redraw_pixmap): Don't try to sneak out doing
	  events from redraw_pixmap, check for them and preempt if
	  there are events on queue. This closes the everythinh-is-
	  not-redrawn-sometimes bug (I hope).

2002-11-04  Stefan Petersen  <spe@stacken.kth.se>

	* src/exportimage.c, gerbv.c: export_png now export whole image
	  despite whats displayed (still depending on zoom/scale thou).
	  If export_png receives an imagetosave, that will be the image
	  that will be saved, so it's more general now. Must hack some
	  more to be able to utilize both ways. Anders can happily remove
	  all what he calls kludges.

2002-10-31  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: Yet another commando that doesn't complain if 
	  default values are given. AS is the lucky one this time.
	* src/gerber.c, src/draw.c: By considering an undefined aperture
	  despite we didn't draw caused strange lines around the first line
	  drawn.

2002-10-31  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c: Replace incremental redraw with clipping
	  option. It is now possible to turn clipping off, this
	  might be useful for export png (sorry for breaking this,
	  Dino).

2002-10-30  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerb_image.h, src/gerber.c: Implemented %SF% and %SR% in
	  parser, but ignored the draw engine. If any of these parameters
	  not are default a warning is issued. Closed a feature request.
