@@ -4,6 +4,7 @@
 	  the gtk_idle-functions. This patch fixes this and closes
 	  pixmap leakage caused by complete redraw when we had a
 	  preempted state.
+	  Oops, you need to start the idle function at least once.
 
 2002-11-05  Anders Eriksson  <anders@umunet.org>
 
